...
                        // Debounce the changes to subdeck names for validation
                        debouncer.debounceAndCheck {
                            isSaveButtonDisabled = checkIsSaveButtonDisabled()
                        }
                    }

                    Button("Delete Deck", role: .destructive) {
                        showDeleteAlert = true
                        showAlert = true
                    }
                    .padding(.top, 50)
                }
            }
            .accessibilityIdentifier("editDeckScreen")
            .navigationTitle("Edit Deck")
            .navigationBarTitleDisplayMode(.inline)
            .onAppear {
                loadInitialData()
            }
            .addToast(toast: $errorToast)
...
