...
                showAddNewDeck.wrappedValue = true
                viewModel.isEndOfList = false
            } label: {
                Image(systemName: "rectangle.stack.badge.plus")
            }
            .disabled(viewModel.isGuestUser())
            .accessibilityIdentifier("addDeckButton")
        }
    }

    @ToolbarContentBuilder
    func toolbarShowModifyDeckButton(showModifyDeck: Binding<Bool>) -> some ToolbarContent {
        ToolbarItem(placement: .topBarTrailing) {
...
                    viewModel.isEndOfList = false
                }
            } label: {
                Image(systemName: "square.and.pencil")
            }
            .disabled(viewModel.deckWithSubdecks.isEmpty || viewModel.isGuestUser())
            .accessibilityIdentifier("showModifyDeckButton")
        }
    }
}

// MARK: - Preview
#if DEBUG
...
