...
                    // Debounced validation to avoid frequent checks
                    debouncer.debounceAndCheck {
                        isSaveButtonDisabled = checkIsSaveButtonDisabled()
                    }
                }
            }
            .accessibilityIdentifier("addDeckScreen")
            .addToast(toast: $errorToast)
            .navigationTitle("New Deck")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                toolbarBackButton(isDisabled: isSaving) { dismiss() }
            }
...
