...
                )
                .padding(.top, 50)
            }
        }
        .background(.clear)
        .accessibilityElement(children: .combine)
        .accessibilityIdentifier("flashcardListScreenEmpty")
    }
}

extension DefaultEmptyScreen {
    enum DefaultEmptyViewType {
        case deck
...
