...
        ToolbarItem(placement: .topBarTrailing) {
            Button {
                showAddFlashcard.wrappedValue = true
            } label: {
                Image(systemName: "rectangle.badge.plus")
            }
            .accessibilityIdentifier("addFlashcardButton")
        }
    }

    @ToolbarContentBuilder
    func toolbarshowModifyFlashcardButton(showModifyFlashcard: Binding<Bool>) -> some ToolbarContent {
        ToolbarItem(placement: .topBarTrailing) {
...
                    showModifyFlashcard.wrappedValue.toggle()
                }
            } label: {
                Image(systemName: "square.and.pencil")
            }
            .disabled(viewModel.flashcards.isEmpty)
            .accessibilityIdentifier("showModifyFlashcardButton")
        }
    }
}

extension FlashcardListScreen {
    // MARK: - Initializer
...
