...
        NavigationStack {
            FlashcardFormView(
                flashcard: $newFlashcard,
                showDeleteFlashcardButton: false,
                deleteFlashcardAction: {} // No delete action needed here
            )
            .accessibilityIdentifier("addFlashcardScreen")
            .applyOverlayProgressScreen(isViewDisabled: $isSaving)
            .navigationTitle("New Flashcard")
            .navigationBarTitleDisplayMode(.inline)
            .addToast(toast: $errorToast)
            .navigationBarBackButtonHidden()
            .onChange(of: newFlashcard) {
...
