...
            // Section for entering the front text of the flashcard.
            Section {
                FlashcardBodyTextField(
                    flashcardText: $flashcard.frontText,
                    textFieldLabel: "Questions, text, etc."
                )
                .accessibilityIdentifier("flashcardFrontTextField")
            } header: {
                Text("Front Side")
                    .applyListSectionStyle()
            }
            .listSectionSeparator(.hidden)
            
...
